<resources>
    <string name="app_name">叫车软件_乘客端</string>

    <string name="laladache">叫车软件_乘客端</string>
    <string name="phone_number">手机号</string>
    <string name="security_code">验证码</string>
    <string name="get_security_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="start_port">出发地</string>
    <string name="end_port">目的地</string>
    <string name="search_route">查看路线</string>
    <string name="order">下单</string>
    <string name="my_location">我的位置</string>
    <string name="cancel">取消</string>
    <string name="orders">订单</string>
    <string name="wallet">钱包</string>
    <string name="server">客服</string>
    <string name="setting">设置</string>
    <!--<string name="wallet">钱包</string>
    <string name="server">客服</string>
    <string name="setting">设置</string>-->

    <string name="keyboard_title">请输入支付密码</string>
    <string name="keyboard_forget_pwd">忘记密码？</string>
</resources>
