<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <com.jeremyfeinstein.slidingmenu.lib.SlidingMenu
        android:id="@+id/slidingmenu"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/top_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                >
                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/roundImageView"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="55dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/photo"
                    app:riv_border_width="0dp"
                    app:riv_corner_radius="100dp"
                    />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="186****7106"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/didi_mem"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="普通会员"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    />

            </LinearLayout>
            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/top_menu"
                android:layout_marginTop="30dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/tv_orders"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="80dp"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:drawableLeft="@mipmap/trip"
                        android:drawablePadding="10dp"
                        android:text="@string/orders"
                        />
                    <TextView
                        android:id="@+id/tv_myWallet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="80dp"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:drawableLeft="@mipmap/wallet"
                        android:drawablePadding="10dp"
                        android:text="@string/wallet"
                        />
                    <TextView
                        android:id="@+id/tv_server"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="80dp"
                        android:padding="10dp"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:drawableLeft="@mipmap/customer_server"
                        android:drawablePadding="10dp"
                        android:text="@string/server"
                        />
                    <TextView
                        android:id="@+id/tv_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="80dp"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:drawableLeft="@mipmap/setting"
                        android:drawablePadding="10dp"
                        android:text="@string/setting"
                        />
                </LinearLayout>
            </ScrollView>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@android:color/darker_gray"
                />

        </RelativeLayout>
    </com.jeremyfeinstein.slidingmenu.lib.SlidingMenu>

</LinearLayout>