<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true" />

    <!--添加标题栏布局-->
    <RelativeLayout
        android:id="@+id/rl_main_menu"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/color_2581ff"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_personal_data"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@mipmap/icon_user"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="城市"
            android:textColor="#000000"
            android:textSize="13sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/tv_city"
            android:background="@mipmap/venus_down"
            />

        <Button
            android:id="@+id/btn_message"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@mipmap/icon_sms"
            android:layout_alignParentRight="true"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp"
            />

    </RelativeLayout>

    <!--显示司机详细信息-->
    <LinearLayout
        android:id="@+id/ll_driver_detail"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="top"
        android:background="#ffffff"
        android:orientation="vertical"
        android:visibility="gone"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@mipmap/icon_user_circle"
            />
        <!--司机详细信息-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="王师傅"
                android:textSize="16sp"
                android:textColor="#000"
                />
            <TextView
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="沪A2010"
                android:textSize="16sp"
                android:textColor="#000"
                />
            <TextView
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="别克·银色GL8"
                android:textSize="16sp"
                android:textColor="#000"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_call"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/icon_call"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="20dp"

            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#808080"
        android:layout_marginTop="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        >
        <TextView
            android:id="@+id/tv_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="司机距您还有："
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFD700"
            android:text="1.1"
            android:textSize="23sp"
            />
        <TextView
            android:id="@+id/tv_wait_please"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="M，请稍等"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            />

    </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="10dp"
        android:background="#FFF"
        android:padding="10dp"
        android:src="@mipmap/main_icon_location" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/linearlayout_shape"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/my_location"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_end"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/end_port"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="空闲"
                android:textColor="#000000"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <Button
                android:id="@+id/btn_search"
                style="@style/Custom_Button"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/search_route" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <Button
                android:id="@+id/btn_order"
                style="@style/Custom_Button"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/order" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />
        </LinearLayout>
    </LinearLayout>
    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/dingwei_icon"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            />
        <Button
            android:id="@+id/btn_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:text="查看订单"
            android:textSize="16sp"
            />
    </RelativeLayout>-->

</FrameLayout>